----------
v6.1.3-git
----------

[mms] Better handle transient mail server connection issues in basic and
      minimal views.
[mms] Fix regression of redirect message not working in dynamic view (Bug
      #12417).
[jan] Fix link to setup browser for mailto: protocol.
[mms] Fix uploading attachments on Firefox 22+ in dynamic view.
[mms] Fix image upload dialog in the HTML compose editor.
[mms] Fix purging search previews from browser cache when switching mailboxes
      (Bug #12384).
[mms] Fix parsing signed & encrypted S/MIME messages sent from Outlook
      2007/2010 (Bug #12374).
[mms] Fix updating mailbox list when changing sort direction in search
      mailboxes (Bug #12369).


------
v6.1.2
------

[mms] Fix saving S/MIME certificate to addressbook when message is both signed
      & encrypted (Bug #12354).
[jan] Fix displaying photos in rendered vCard files.
[jan] Fix detecting capability to list users if called via RPC (Bug #12305).
[mms] Clear cached previews in dynamic view when changing or refreshing a
      search mailbox (Bug #12349).
[mms] Fix adding an HTML trailer to a compose message.
[mms] Fix regression preventing ACLs from being added (Bug #12346).
[mms] More fixes for regressions in linked attachment behavior.


------
v6.1.1
------

[mms] Fixes for regressions in linked attachment behavior.
[mms] Catch invalid characters in user-defined flag names (Bug #12335).
[mms] Workaround IE javascript limitations preventing attachments from being
      uploaded in dynamic view.
[mms] Remember mailbox list position when viewing messages in smartmobile view.
[mms] Fix handling unsuccessful mailbox import in dynamic view.
[mms] Mailbox imports are now limited to 2500 messages by default.
[mms] Fix adding addresses from the contacts popup in certain situations (Bug
      #12312).
[jan] Fix fatal error when importing a PGP key (Bug #12318).
[mms] Fix regressions in navigation arrow links on basic message page.